@@ -79,15 +79,18 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
   public List<PrefixedDimension> getQueryDimensionsByProgramStageId(
       String programId, String programStageId) {
 
-    Collection<ProgramStage> programStages = getProgramStages(programId, programStageId);
+    Set<ProgramStage> programStages = getProgramStages(programId, programStageId);
 
     if (CollectionUtils.isNotEmpty(programStages)) {
-      return programStages.stream().map(this::dimensions).flatMap(Collection::stream).toList();
+      return programStages.stream()
+          .map(this::dimensions)
+          .flatMap(Collection::stream)
+          .collect(Collectors.toList());
     }
-    return Collections.emptyList();
+    return List.of();
   }
 
-  private Collection<ProgramStage> getProgramStages(String programId, String programStageId) {
+  private Set<ProgramStage> getProgramStages(String programId, String programStageId) {
     checkProgramStageIsInProgramIfNecessary(programId, programStageId);
     return Optional.ofNullable(programStageId)
         .filter(StringUtils::isNotBlank)
@@ -135,9 +138,9 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
                         filterByValueType(
                             QUERY,
                             ofItemsWithProgram(p, getTeasIfRegistrationAndNotConfidential(p))),
-                        ofItemsWithProgram(p, getCategoriesIfNeeded(p)),
+                        ofItemsWithProgram(p, getCategories(p)),
                         ofItemsWithProgram(p, getAttributeCategoryOptionGroupSetsIfNeeded(p)))))
-        .orElse(Collections.emptyList());
+        .orElse(List.of());
   }
 
   @Override
@@ -153,11 +156,11 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
                             AGGREGATE,
                             ofItemsWithProgram(
                                 ps.getProgram(), ps.getProgram().getTrackedEntityAttributes())),
-                        ofItemsWithProgram(ps.getProgram(), getCategoriesIfNeeded(ps.getProgram())),
+                        ofItemsWithProgram(ps.getProgram(), getCategories(ps.getProgram())),
                         ofItemsWithProgram(
                             ps.getProgram(),
                             getAttributeCategoryOptionGroupSetsIfNeeded(ps.getProgram())))))
-        .orElse(Collections.emptyList());
+        .orElse(List.of());
   }
 
   private List<CategoryOptionGroupSet> getAttributeCategoryOptionGroupSetsIfNeeded(
@@ -169,27 +172,26 @@ public class DefaultEventAnalyticsDimensionsService implements EventAnalyticsDim
                 categoryService.getAllCategoryOptionGroupSets().stream()
                     .filter(this::isTypeAttribute)
                     .collect(Collectors.toList()))
-        .orElse(Collections.emptyList());
+        .orElse(List.of());
   }
 
   private boolean isTypeAttribute(CategoryOptionGroupSet categoryOptionGroupSet) {
     return ATTRIBUTE == categoryOptionGroupSet.getDataDimensionType();
   }
 
-  private Collection<Category> getCategoriesIfNeeded(Program program) {
+  private List<Category> getCategories(Program program) {
     return Optional.of(program)
         .filter(Program::hasNonDefaultCategoryCombo)
         .map(Program::getCategoryCombo)
         .map(CategoryCombo::getCategories)
-        .orElse(Collections.emptyList());
+        .orElse(List.of());
   }
 
-  private Collection<TrackedEntityAttribute> getTeasIfRegistrationAndNotConfidential(
-      Program program) {
+  private List<TrackedEntityAttribute> getTeasIfRegistrationAndNotConfidential(Program program) {
     return Optional.of(program)
         .filter(Program::isRegistration)
         .map(Program::getTrackedEntityAttributes)
-        .orElse(Collections.emptyList())
+        .orElse(List.of())
         .stream()
         .filter(this::isNotConfidential)
         .collect(Collectors.toList());
