@@ -36,9 +36,8 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.Collection;
 import java.util.Collections;
-import java.util.stream.Collectors;
+import java.util.List;
 import org.hisp.dhis.analytics.event.EventAnalyticsDimensionsService;
 import org.hisp.dhis.category.CategoryService;
 import org.hisp.dhis.common.BaseIdentifiableObject;
@@ -82,12 +81,12 @@ class EventAnalyticsDimensionsServiceTest {
 
   @Test
   void testQueryDoesntContainDisallowedValueTypes() {
-    Collection<BaseIdentifiableObject> analyticsDimensions =
+    List<BaseIdentifiableObject> analyticsDimensions =
         eventAnalyticsDimensionsService
             .getQueryDimensionsByProgramStageId(PROGRAM_UID, "anUid")
             .stream()
             .map(PrefixedDimension::getItem)
-            .collect(Collectors.toList());
+            .toList();
 
     assertTrue(
         analyticsDimensions.stream()
@@ -103,10 +102,10 @@ class EventAnalyticsDimensionsServiceTest {
 
   @Test
   void testAggregateOnlyContainsAllowedValueTypes() {
-    Collection<BaseIdentifiableObject> analyticsDimensions =
+    List<BaseIdentifiableObject> analyticsDimensions =
         eventAnalyticsDimensionsService.getAggregateDimensionsByProgramStageId("anUid").stream()
             .map(PrefixedDimension::getItem)
-            .collect(Collectors.toList());
+            .toList();
 
     assertTrue(
         analyticsDimensions.stream()
